k8s/angular-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: angular-app-service
  namespace: argocd
spec:
  selector:
    app: angular-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
